; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/extr_enclosure.c_get_component_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/extr_enclosure.c_get_component_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.enclosure_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.enclosure_device*, %struct.enclosure_component*)* }
%struct.enclosure_component = type { i64 }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@enclosure_status = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @get_component_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_component_status(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.enclosure_device*, align 8
  %8 = alloca %struct.enclosure_component*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = getelementptr inbounds %struct.device, %struct.device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.enclosure_device* @to_enclosure_device(i32 %11)
  store %struct.enclosure_device* %12, %struct.enclosure_device** %7, align 8
  %13 = load %struct.device*, %struct.device** %4, align 8
  %14 = call %struct.enclosure_component* @to_enclosure_component(%struct.device* %13)
  store %struct.enclosure_component* %14, %struct.enclosure_component** %8, align 8
  %15 = load %struct.enclosure_device*, %struct.enclosure_device** %7, align 8
  %16 = getelementptr inbounds %struct.enclosure_device, %struct.enclosure_device* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32 (%struct.enclosure_device*, %struct.enclosure_component*)*, i32 (%struct.enclosure_device*, %struct.enclosure_component*)** %18, align 8
  %20 = icmp ne i32 (%struct.enclosure_device*, %struct.enclosure_component*)* %19, null
  br i1 %20, label %21, label %30

21:                                               ; preds = %3
  %22 = load %struct.enclosure_device*, %struct.enclosure_device** %7, align 8
  %23 = getelementptr inbounds %struct.enclosure_device, %struct.enclosure_device* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32 (%struct.enclosure_device*, %struct.enclosure_component*)*, i32 (%struct.enclosure_device*, %struct.enclosure_component*)** %25, align 8
  %27 = load %struct.enclosure_device*, %struct.enclosure_device** %7, align 8
  %28 = load %struct.enclosure_component*, %struct.enclosure_component** %8, align 8
  %29 = call i32 %26(%struct.enclosure_device* %27, %struct.enclosure_component* %28)
  br label %30

30:                                               ; preds = %21, %3
  %31 = load i8*, i8** %6, align 8
  %32 = load i8**, i8*** @enclosure_status, align 8
  %33 = load %struct.enclosure_component*, %struct.enclosure_component** %8, align 8
  %34 = getelementptr inbounds %struct.enclosure_component, %struct.enclosure_component* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = getelementptr inbounds i8*, i8** %32, i64 %35
  %37 = load i8*, i8** %36, align 8
  %38 = call i32 @snprintf(i8* %31, i32 40, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %37)
  ret i32 %38
}

declare dso_local %struct.enclosure_device* @to_enclosure_device(i32) #1

declare dso_local %struct.enclosure_component* @to_enclosure_component(%struct.device*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
